# japan-car-import

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_cleaning.ipynb  02_eda.ipynb  03_model_training.ipynb
src/: config.py  data_cleaning.py  evaluate.py  train.py
