[project]
name = "japan-car-import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]
